--- a/assets/style/home.css
+++ b/assets/style/home.css
@@ -11,6 +11,7 @@
     font-size: 36px;
   }
 }*/
+
 .title{
     font-family: var(--fonte-title);
     font-size: 60px;
@@ -25,7 +26,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 50px;
+    margin-top: 5em;
+    margin-bottom: 10em;
     gap: 43px;
 }
 .me{
