--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
-@import url(/asssets/style/nav-bar.css);
-@import url(asssets/style/home.css);
+@import url(assets/style/nav-bar.css);
+@import url(assets/style/home.css);
+@import url(assets/style/portfolio.css);
 
 /* variaveis */
 :root {
