feat: criação do about

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 @import url(assets/style/nav-bar.css);
 @import url(assets/style/home.css);
 @import url(assets/style/portfolio.css);
+@import url(assets/style/about.css);
 
 /* variaveis */
 :root {
