--- a/assets/style/home.css
+++ b/assets/style/home.css
@@ -17,7 +17,12 @@
     font-size: 60px;
     font-weight: 700;
     line-height: 1.1;
-    background: linear-gradient(90deg, #ffffff 0%, #9e9e9e 60%, #6d6d6d 100%);
+    background: linear-gradient(
+      90deg,
+      #e5e7eb 0%,   /* cinza claro metálico */
+      #9ca3af 45%,  /* cinza médio */
+      #2F7CFF 100%  /* azul principal */
+    );
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
