--- a/assets/style/nav-bar.css
+++ b/assets/style/nav-bar.css
@@ -11,7 +11,7 @@
     top: 0;
     left: 0;
     width: 100%;
-
+    box-shadow: 0 1px 10px rgba(48, 51, 51, 0.6);
     z-index: 1000; /* garante que fique acima do conteúdo */
     background-color: var(--bg-color); /* ou a cor do seu layout */
 }
