--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 @import url(assets/style/home.css);
 @import url(assets/style/portfolio.css);
 @import url(assets/style/about.css);
+@import url(assets/style/contact.css);
 
 /* variaveis */
 :root {
