ultimo commit do ano 2025

--- a/assets/style/portfolio.css
+++ b/assets/style/portfolio.css
@@ -63,4 +63,5 @@ body {
   background: var(--azul-detalhes); /* azul destaque */
   border-color: var(--cor-preto-stroke);
 }
+/* ultimo commit do ano  */
 
