--- a/assets/style/contact.css
+++ b/assets/style/contact.css
@@ -2,7 +2,7 @@
 
 
 .conteiner-contact{
-    margin-top: 3em;
+    margin-top: 2rem;
     background-color: var(--azul-detalhes);
     padding: 60px 80px;
 }
@@ -27,7 +27,7 @@
 .contact-field textarea{
     width: 100%;
     background-color: #e5e5e5;
-    border: 2px solid var(--cor-preto-stroke);
+    border: 2px solid #000;
     padding: 12px 14px;
     font-size: 14px;
     outline: none;
@@ -55,36 +55,3 @@
     gap: 16px;
 }
 
-.contact-link {
-    width: 82px;
-    height: 70px;
-
-    background-color: var(--azul-detalhes);
-
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-    border-top: 3px solid #000;
-    border-right: 3px solid #000;
-    border-left: 3px solid #000;
-    border-bottom: 9px solid #000;
-
-    border-radius: 14px;
-    cursor: pointer;
-
-    transition: transform 0.2s ease;
-}
-
-.contact-link a {
-    width: 100%;
-    height: 100%;
-
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.contact-link:hover {
-    transform: translateY(-3px);
-}
